chore: abordagem com loop na virtual thread